sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:9: error: not found: value i
  for(j<- i to getNombreValeurs() ){
          ^